fix: text are now visible for both themes on default

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,10 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Apply default text color to all text elements */
+* {
+  color: hsl(var(--nextui-foreground));
+}
+
+
